Module full screen implementation Transmission full screen implementation

--- a/plugins/transmission/src/main/java/assets/less/transmission.less
+++ b/plugins/transmission/src/main/java/assets/less/transmission.less
@@ -142,9 +142,31 @@
 
   .actions {
     position: absolute;
-    top: 10px;
+    bottom: -5px;
     right: 25px;
     width: 20px;
     margin-top:0;
+
+    .btn{
+      margin:0;
+    }
+  }
+}
+
+
+//fullscreen
+.transmission.size-full-screen{
+  background:none;
+  color: #666;
+  .global{
+    strong{
+      margin: 0 5px;
+    }
+  }
+
+  .module-overlay {
+
+    background-color: #fff;
+
   }
 }
