--- a/web/src/main/java/assets/less/index.less
+++ b/web/src/main/java/assets/less/index.less
@@ -59,6 +59,22 @@
     .module {
       position: relative;
       height: 100%;
+
+
+      .module-icons{
+        position: absolute;
+        right: 5px;
+        top: 5px;
+        z-index: 2;
+
+
+        a{
+          margin: 0 5px;
+          color:white;
+          font-size: 15px;
+        }
+      }
+
       .loading {
         background-color: white;
         position: absolute;
