--- a/web/src/main/resources/templates/add-module.jade
+++ b/web/src/main/resources/templates/add-module.jade
@@ -2,13 +2,16 @@ extends ./layout.jade
 block css
 
 block content
+    .head-links
+        a(href="/") << Back
     h1 Select module to add
     .row
         .col-md-12
-        for plugin in plugins
-            h2 #{plugin.getDisplayName()}
-            p #{plugin.getDescription()}
-            .add-button
-                a(href="/add-module/#{plugin.getClass().getCanonicalName()}", class="btn btn-primary") Add #{plugin.getDisplayName()}
+            for plugin in plugins
+                h2 #{plugin.getDisplayName()}
+                p #{plugin.getDescription()}
+                .add-button
+                    a(href="/add-module/#{plugin.getClass().getCanonicalName()}", class="btn btn-primary") Add #{plugin.getDisplayName()}
+                hr
 block scripts
     
