--- a/web/src/main/resources/templates/index.jade
+++ b/web/src/main/resources/templates/index.jade
@@ -14,10 +14,9 @@ block content
             .loader
         #layout
 
-    #notification.success
+    #notification
         .icon
         .message
-            | Test notification
 
     span#settings-button.glyphicon.glyphicon-cog
     .global-settings
