--- a/web/src/main/resources/templates/layout.jade
+++ b/web/src/main/resources/templates/layout.jade
@@ -9,7 +9,8 @@ html(lang="en")
     link(href="http://fonts.googleapis.com/css?family=Roboto:300,300italic", rel="stylesheet", type="text/css")
     link(href='/css/vendor/bootstrap/css/bootstrap.min.css', rel='stylesheet')
     link(href='/css/main.css', rel='stylesheet')
-    
+    link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", rel="stylesheet")
+
     block css
   body
     .container
