--- a/web/src/main/resources/templates/module-layout.jade
+++ b/web/src/main/resources/templates/module-layout.jade
@@ -6,7 +6,13 @@
                     .module-settings-icon(data-id="#{layout.getModule().getId()}")
                         span(class="glyphicon glyphicon-option-horizontal")
 
-
+                .module-icons
+                    if plugins.get(layout.getModule().getId()).hasFullScreen()
+                        a(href="/module/#{layout.getModule().getId()}/full-screen")
+                            span.glyphicon.glyphicon-resize-full
+                    if plugins.get(layout.getModule().getId()).hasExternalLink()
+                        a(href="#{plugins.get(layout.getModule().getId()).getExternalLink()}", target="_blank")
+                            span.glyphicon.glyphicon-share
                 .settings-overlay
                 .loading
                     .loader
