--- a/plugins/transmission/src/main/java/assets/templates/transmission-full-screen.jade
+++ b/plugins/transmission/src/main/java/assets/templates/transmission-full-screen.jade
@@ -2,10 +2,10 @@
 
 p
     button.btn.add
-        span.glyphicon.glyphicon-plus
+        i.fa.fa-plus
         | Add torrent
     button.btn.alt
-        span.glyphicon.glyphicon-sort-by-attributes
+        i.fa.fa-sort-amount-asc
         | Alternate Speeds
 
 .torrent-list
@@ -29,8 +29,8 @@ h5 Global
             .modal-body
                 p
                     button.btn.btn-primary.pause-torrent
-                        span.glyphicon.glyphicon-pause
+                        i.fa.fa-pause
                         | Pause/Resume torrent
                     button.btn.btn-danger.remove-torrent
-                        span.glyphicon.glyphicon-remove
+                        i.fa.fa-times
                         | Remove torrent
