--- a/web/src/main/java/assets/less/module-modal.less
+++ b/web/src/main/java/assets/less/module-modal.less
@@ -3,10 +3,15 @@
 #module-modal {
 
   p {
+
+    padding: 5px 0;
+    font-size: 18px;
+
     a {
       display: block;
       color: #222;
-      .glyphicon {
+
+      .fa {
         color: @accentColor;
         margin: 0 10px;
       }
@@ -27,6 +32,7 @@
     -ms-transform: scale(@scale); /* IE 9 */
     -webkit-transform: scale(@scale); /* Safari */
     transform: scale(@scale);
+    background-color:#eee
   }
 
   .resize-size {
