--- a/plugins/sonarrtv/src/main/java/assets/templates/sonarrtv-3x1.jade
+++ b/plugins/sonarrtv/src/main/java/assets/templates/sonarrtv-3x1.jade
@@ -2,6 +2,6 @@
 
 .buttons
     a.previous
-        span.glyphicon.glyphicon-chevron-left
+        i.fa.fa-chevron-left
     a.next
-        span.glyphicon.glyphicon-chevron-right
+        i.fa.fa-chevron-right
