--- a/plugins/transmission/src/main/java/assets/less/transmission.less
+++ b/plugins/transmission/src/main/java/assets/less/transmission.less
@@ -156,6 +156,23 @@
 
 //fullscreen
 .transmission.size-full-screen{
+  .modal-title{
+    margin:5px;
+  }
+
+  .modal{
+    .btn{
+      .fa{
+        margin:0 10px 0 0;
+      }
+    }
+  }
+
+  h2{
+    margin: 30px 0;
+    padding:0;
+  }
+
   background:none;
   color: #666;
   .global{
