--- a/plugins/transmission/src/main/java/assets/templates/transmission-3x2.jade
+++ b/plugins/transmission/src/main/java/assets/templates/transmission-3x2.jade
@@ -13,6 +13,6 @@ h4 Transmission
         p.dl
     p.actions
         button.btn.add
-            span.glyphicon.glyphicon-plus
+            i.fa.fa-plus
         button.btn.alt
-            span.glyphicon.glyphicon-sort-by-attributes
+            i.fa.fa-sort-amount-asc
