--- a/web/src/main/java/assets/less/index.less
+++ b/web/src/main/java/assets/less/index.less
@@ -12,7 +12,7 @@
 #page-title {
   font-size: 30px;
   margin: 10px;
-  .name{
+  .name {
     color: #222;
   }
   .layout {
@@ -60,17 +60,15 @@
       position: relative;
       height: 100%;
 
-
-      .module-icons{
+      .module-icons {
         position: absolute;
         right: 5px;
         top: 5px;
         z-index: 2;
 
-
-        a{
+        a {
           margin: 0 5px;
-          color:white;
+          color: white;
           font-size: 15px;
         }
       }
@@ -142,9 +140,8 @@
   // ul
 }
 
-
-@keyframes show-grid{
-  0%{
+@keyframes show-grid {
+  0% {
     opacity: 0;
     @scale: 0;
     -ms-transform: scale(@scale); /* IE 9 */
@@ -152,7 +149,7 @@
     transform: scale(@scale);
   }
 
-  60%{
+  60% {
     opacity: 1;
     @scale: 1.1;
     -ms-transform: scale(@scale); /* IE 9 */
@@ -160,7 +157,7 @@
     transform: scale(@scale);
   }
 
-  100%{
+  100% {
     @scale: 1;
     -ms-transform: scale(@scale); /* IE 9 */
     -webkit-transform: scale(@scale); /* Safari */
@@ -170,36 +167,38 @@
 
 // gridster
 
-.gridster.layout-edit {
-  background-color: #ccc;
-  .gridster-item {
-    @scale-size: 0.8;
-    -ms-transform: scale(@scale-size); /* IE 9 */
-    -webkit-transform: scale(@scale-size); /* Safari */
-    transform: scale(@scale-size);
+#layout.layout-edit {
+  .gridster {
+    background-color: fadeout(darken(@accentColor, 10%), 10%);
+    .gridster-item {
+      @scale-size: 0.8;
+      -ms-transform: scale(@scale-size); /* IE 9 */
+      -webkit-transform: scale(@scale-size); /* Safari */
+      transform: scale(@scale-size);
 
-    .module {
-      .settings-overlay {
-        display: block;
-        opacity: 0.6;
+      .module {
+        .settings-overlay {
+          display: block;
+          opacity: 0.6;
+        }
       }
     }
-  }
-  //gridster-item
-  .gridster-item.selected {
-    @scale-size: 1;
-    -ms-transform: scale(@scale-size); /* IE 9 */
-    -webkit-transform: scale(@scale-size); /* Safari */
-    transform: scale(@scale-size);
+    //gridster-item
+    .gridster-item.selected {
+      @scale-size: 1;
+      -ms-transform: scale(@scale-size); /* IE 9 */
+      -webkit-transform: scale(@scale-size); /* Safari */
+      transform: scale(@scale-size);
 
-    .module {
-      .settings-overlay {
-        display: block;
-        opacity: 0.1;
-      }
+      .module {
+        .settings-overlay {
+          display: block;
+          opacity: 0.1;
+        }
 
-      .module-settings {
-        display: block;
+        .module-settings {
+          display: block;
+        }
       }
     }
   }
@@ -223,10 +222,11 @@
 .global-settings {
   position: fixed;
   bottom: -20px;
-  right: 5px;
+  left: 100%;
   margin-right: 25px;
   opacity: 0;
   font-size: 16px;
+  background-color: @background;
 
   @scale-size: 0.5;
   -ms-transform: scale(@scale-size); /* IE 9 */
@@ -236,19 +236,38 @@
   -webkit-transition: all @transition-speed !important;
   transition: all @transition-speed !important;
 
+  @menu-border-color: #eee;
+
+  z-index: 100;
+
   ul {
     list-style: none;
-
+    padding: 0;
+    border: 1px solid @menu-border-color;
+    border-left: 5px solid @accentColor;
+    border-radius: 4px;
     li {
-      display: inline-block;
-      margin: 0 5px;
+      display: block;
+      padding: 10px;
+
       a {
         cursor: pointer;
-        color: black;
+        color: @text-color;
+        display: block;
+        width: 100%;
+        height: 100%;
       }
-      .glyphicon {
+
+      a:hover {
+        text-decoration: none;
+      }
+      .fa {
         color: @accentColor;
       }
+    }
+
+    li:not(:last-of-type) {
+      border-bottom: 1px solid @menu-border-color;
     }
   }
 
@@ -277,9 +296,94 @@
   bottom: 5px;
   right: 5px;
   opacity: 1;
+  left: inherit;
 
   @scale-size: 1;
   -ms-transform: scale(@scale-size); /* IE 9 */
   -webkit-transform: scale(@scale-size); /* Safari */
   transform: scale(@scale-size);
+}
+
+#layout-edit-mode {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: -100px;
+  height:50px;
+  background-color: @accentColor;
+
+  -webkit-transition: all @transition-speed !important;
+  transition: all @transition-speed !important;
+
+  .icon {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+
+    display: inline-block;
+    width: 50px;
+    text-align: center;
+    height: 100%;
+    color: @accentColor;
+    background-color: darken(@accentColor, 20%);
+    font: 25px FontAwesome;
+  }
+  .icon:before {
+    position: absolute;
+    top: 15px;
+    left:12px;
+    content: "\f00a";
+  }
+
+  .close-editing {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+
+    display: inline-block;
+    width: 50px;
+    text-align: center;
+    height: 100%;
+    color: @accentColor;
+    background-color: darken(@accentColor, 20%);
+    font: 25px FontAwesome;
+    -webkit-transition: all @transition-speed !important;
+    transition: all @transition-speed !important;
+    cursor:pointer;
+  }
+
+  .close-editing:before {
+    position: absolute;
+    top: 14px;
+    right:12px;
+    content: "\f00d";
+  }
+
+  .close-editing:hover{
+      color:  darken(@accentColor, 20%);
+    background-color:@accentColor;
+  }
+
+
+
+  .message {
+    display: block;
+    text-align: left;
+    color: white;
+    font-size: 20px;
+    padding-left: 20px;
+    vertical-align: top;
+    padding-top: 10px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow-x: hidden;
+    margin: 0 50px;
+  }
+
+}
+
+#layout-edit-mode.layout-edit {
+  bottom: 0;
 }
