--- a/web/src/main/resources/templates/layout-settings.jade
+++ b/web/src/main/resources/templates/layout-settings.jade
@@ -21,9 +21,9 @@ block content
                     strong.name #{layout.getName()}
                     if layout.getId() > 3
                         a(class="rename")
-                            span.glyphicon.glyphicon-pencil
+                            i.fa.fa-pencil
                         a(class="delete")
-                            span.glyphicon.glyphicon-remove
+                            i.fa.fa-times
 
                 p
                     | Grid Width:
@@ -34,12 +34,12 @@ block content
                 if layout.getId() > 3
                     p
                         a(class="remove")
-                            span.glyphicon.glyphicon-minus
+                            i.fa.fa-minus
                         a(class="add")
-                            span.glyphicon.glyphicon-plus
+                            i.fa.fa-plus
 
     button#add-layout.btn.btn-primary
-        span.glyphicon.glyphicon-plus
+        i.fa.fa-plus
         | Add layout
 
 
