--- a/web/src/main/resources/templates/index.jade
+++ b/web/src/main/resources/templates/index.jade
@@ -55,7 +55,7 @@ block content
                     p.item
                         a.edit(href="")
                             i.fa.fa-pencil
-                            | Edit settings
+                            | Module settings
                     p.item.move
                         a
                             i.fa.fa-pause
