--- a/plugins/sonarrtv/src/main/java/assets/templates/sonarrtv-4x4.jade
+++ b/plugins/sonarrtv/src/main/java/assets/templates/sonarrtv-4x4.jade
@@ -1,7 +1,1 @@
-.shows-container
-
-.buttons
-    a.previous
-        i.fa.fa-chevron-left
-    a.next
-        i.fa.fa-chevron-right
+include ./sonarrtv-2x2.jadde
