--- a/plugins/harddisk/src/main/java/assets/less/harddisk.less
+++ b/plugins/harddisk/src/main/java/assets/less/harddisk.less
@@ -15,26 +15,26 @@
   p {
     text-align: right;
     font-size: 17px;
-    margin-right:5px;
+    margin-right: 5px;
   }
 
   svg.hdd-svg {
-    width: 100%;
     position: absolute;
-    left:0px;
-    right:0px;
-    height: 10px;
-    bottom:15px;
-  }
+    left: 20px;
+    width: 60px;
+    bottom: 5px;
 
-  svg.hdd-svg .hdd-rect {
-    fill: #FFF;
-    fill-opacity: 1;
-  }
+    polygon {
+      fill: #57CCC1;
+      stroke: #000;
+      stroke-width: 1;
+    }
 
-  svg.hdd-svg .hdd-rect-full {
-    fill: #05403A;
-    fill-opacity: 0.5;
+    g {
+      polygon {
+        fill: white;
+      }
+    }
   }
 
   .hdd-info {
@@ -59,4 +59,25 @@
 
   .hdd-container {
   }
+}
+
+.harddisk.size-2x1 {
+  h4 {
+    margin-left: 5px;
+    margin-top: 10px;
+    margin-bottom: 39px;
+  }
+
+  p {
+    text-align: right;
+    font-size: 15px;
+  }
+
+  svg.hdd-svg {
+    position: absolute;
+    left: 0px;
+    width: 65px;
+    bottom: 5px;
+  }
+
 }
