CSS tweaks & fixes

--- a/plugins/pihole/src/main/java/assets/less/pihole.less
+++ b/plugins/pihole/src/main/java/assets/less/pihole.less
@@ -7,43 +7,43 @@
   background-repeat: no-repeat;
   background-position: left center;
   background-size: auto 150%;
+  margin-bottom: 20px;
+
 
   h1 {
     font-size: 20px;
-    margin: 0;
+    margin: 0 0 20px 0;
+
   }
 
   h3 {
     font-size: 15px;
     color: #EEE;
     font-weight: bold;
-    text-align: right;
+    text-align: center;
     margin: 0;
     padding-top: 0px;
     margin-bottom: 15px;
   }
   p {
-    text-align: right;
+    text-align: center;
     font-size: 27px;
     margin: 0;
 
   }
 }
 
+
 .pihole.size-1x1 {
   h1 {
     font-size: 17px;
+    margin-bottom: 0px;
+
   }
 
   .ads-blocked {
     padding-top: 10px;
 
-    p {
-      text-align: center;
-    }
 
-    h3 {
-      text-align: center;
-    }
   }
 }
