--- a/plugins/sonarrtv/src/main/java/assets/less/sonarrtv.less
+++ b/plugins/sonarrtv/src/main/java/assets/less/sonarrtv.less
@@ -54,12 +54,15 @@
 
   .buttons {
     position:absolute;
+    top:5px;
     a {
       color: white;
 
       cursor: pointer;
       text-shadow: 0px 0px 5px #222;
       z-index: 5;
+      font-size:20px;
+      margin:0 10px;
     }
   }
 }
@@ -84,10 +87,7 @@
     }
   }
 
-  .buttons a {
-    font-size: 25px;
-    margin: 5px 0 0 5px;
-  }
+
 }
 
 .sonarrtv.size-3x1 {
@@ -121,11 +121,9 @@
   .buttons{
     position:absolute;
     bottom: 5px;
+    top: inherit;
     right:10px;
-    a{
-      font-size:20px;
-      margin:0 10px;
-    }
+
   }
 }
 
@@ -148,8 +146,5 @@
     }
   }
 
-  .buttons a {
-    font-size: 25px;
-    margin: 5px 0 0 5px;
-  }
+
 }
