- Plugin setting validation implementation - Authentication and session management

--- a/web/src/main/resources/templates/module-settings.jade
+++ b/web/src/main/resources/templates/module-settings.jade
@@ -5,7 +5,17 @@ block content
     .head-links
         a(href="/") << Back
     h1 Settings for #{pluginName}
-    
+
+    if errors
+        .alert.alert-danger(role="alert")
+            each message, title in errors
+                p
+                    strong
+                        #{title}
+                        | :&nbsp;
+                    #{message}
+
+
     form(action="/save-module", method="post")
         if pluginClass
             input(type="hidden", name="class", value="#{pluginClass}")
