--- a/web/src/main/resources/templates/settings.jade
+++ b/web/src/main/resources/templates/settings.jade
@@ -24,7 +24,7 @@ block content
                         input(type="text", class="form-control", id="username", name="username")
                 .form-group
                     label(for="password") Password
-                    input(type="password", class="form-control", id="password", name="password")
+                    input(type="password", class="form-control", id="password", name="password", placeholder="Leave empty to keep current password")
                     
         .settings-box
             h2 Notifications
