--- a/web/src/main/resources/templates/index.jade
+++ b/web/src/main/resources/templates/index.jade
@@ -31,6 +31,10 @@ block content
                 a
                     i.fa.fa-th
                     |  Edit Layout
+            li
+                a(href="/logout")
+                    i.fa.fa-sign-out
+                    |  Log out
 
     #pages-overlay
     #pages
