- Remote plugin management

--- a/web/src/main/java/assets/less/index.less
+++ b/web/src/main/java/assets/less/index.less
@@ -65,6 +65,8 @@
         right: 5px;
         top: 5px;
         z-index: 2;
+        color:white;
+        font-size: 15px;
 
         a {
           margin: 0 5px;
