Added plugin to follow MMA events

--- a/plugins/systeminfo/src/main/java/assets/templates/systeminfo-settings.jade
+++ b/plugins/systeminfo/src/main/java/assets/templates/systeminfo-settings.jade
@@ -3,4 +3,4 @@ label
         input(type="checkbox", name="notifications", value="1", checked = "true")
     else
         input(type="checkbox", name="notifications", value="1")
-    span Notify my when the RAM or CPU load is high
+    span Notify me when the RAM or CPU load is high
