--- a/plugins/pihole/src/main/java/assets/templates/pihole-settings.jade
+++ b/plugins/pihole/src/main/java/assets/templates/pihole-settings.jade
@@ -1,6 +1,7 @@
 .form-group
     label(for="url") Pi-Hole admin URL (without /api.php)
     if settings && settings.containsKey("url")
-        input.form-control(type="text", id="url", name="url", placeholder="URL", value='#{settings.get("url")}')
+        input.form-control(type="text", id="url", name="url", placeholder="URL", value='#{settings.get(
+                "url")}')
     else
         input.form-control(type="text", id="url", name ="url", placeholder = "URL")
