add process list to system info full screen

--- a/plugins/systeminfo/src/main/java/assets/less/systeminfo.less
+++ b/plugins/systeminfo/src/main/java/assets/less/systeminfo.less
@@ -75,6 +75,19 @@
     }
   }
 
+  .processes{
+    width:100%;
+
+    .sort{
+      cursor: pointer;
+      user-select:none;
+    }
+    .sort.selected{
+      background-color: #EEEEEE;
+    }
+
+  }
+
   .infobox{
     border-top: 3px solid @orange;
 
