--- a/plugins/transmission/src/main/java/assets/less/transmission.less
+++ b/plugins/transmission/src/main/java/assets/less/transmission.less
@@ -167,6 +167,18 @@
     }
   }
 
+  .category-toggle{
+    cursor: pointer;
+    user-select: none;
+  }
+
+  .torrent-category{
+    display:block;
+  }
+
+  .torrent-category.hidden{
+    display: none;
+  }
   h2 {
     margin: 30px 0;
     padding: 0;
