revamp network module remove native libraries add graph to UI

--- a/plugins/network-monitor/src/main/java/assets/less/networkmonitor.less
+++ b/plugins/network-monitor/src/main/java/assets/less/networkmonitor.less
@@ -7,25 +7,46 @@
   background-position: 90% center;
   background-size: cover;
 
-  h3 {
-    padding-left: 10px;
-    color: white;
-  }
+  .net-info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
 
-  h3 small, .networkinfo .row .title, .networkinfo .col-xs-6 h4 {
-    color: #eee;
-  }
+    h3 {
+      padding-left: 10px;
+      color: white;
+    }
 
-  .col-xs-6 {
-    text-align: center;
-  }
+    h3 small, .networkinfo .row .title, .networkinfo .col-xs-6 h4 {
+      color: #eee;
+    }
 
-  .col-xs-6 p {
-    font-size: 18px;
-  }
+    .col-xs-6 {
+      text-align: center;
+    }
 
-  .row .title {
-    font-size: 13px;
+    .col-xs-6 p {
+      font-size: 18px;
+    }
+
+    .row .title {
+      font-size: 13px;
+    }
+  }
+  .svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+
+    .graph {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
