remove icon from the network info module fix duplicated modal bug,

--- a/plugins/network-monitor/src/main/java/assets/less/networkmonitor.less
+++ b/plugins/network-monitor/src/main/java/assets/less/networkmonitor.less
@@ -2,10 +2,10 @@
   padding: 5px;
   background-color: #5CAF50;
   color: white;
-  background-image: url("../files/images/icon.svg");
-  background-repeat: no-repeat;
-  background-position: 90% center;
-  background-size: cover;
+  //background-image: url("../files/images/icon.svg");
+  //background-repeat: no-repeat;
+  //background-position: 90% center;
+  //background-size: cover;
 
   .net-info {
     position: absolute;
