--- a/web/src/main/resources/templates/layout.jade
+++ b/web/src/main/resources/templates/layout.jade
@@ -24,6 +24,7 @@ html(lang="en")
 
         .container
             block content
+        .modal-dump
         script(src="/js/vendor/jquery/jquery-2.2.3.min.js")
         script(src="/js/vendor/bootstrap/bootstrap.min.js")
         block scripts
