allow plugins to send data to settings template (example: list of network interface for the network monitor plugin) modify hard disk plugin, select mount point, opacity of the disk filling SVG is now linked to usage of the disk.

--- a/plugins/harddisk/src/main/java/assets/templates/harddisk-settings.jade
+++ b/plugins/harddisk/src/main/java/assets/templates/harddisk-settings.jade
@@ -1,7 +1,10 @@
 .form-group
-    label(for="path") Path
-    if settings && settings.containsKey("path")
-        input.form-control(type="text", id="path", name="path", placeholder="Absolute Path", value='#{settings.get(
-                "path")}')
-    else
-        input.form-control(type="text", id="path", name ="path", placeholder = "Absolute Path")
+    p Select mount point
+    each val, index in model
+        .radio
+            label
+                if(settings && settings.containsKey("uuid") && settings.get("uuid").equalsIgnoreCase(val.getUuid()))
+                    input(type="radio", name="uuid", value="#{index}", checked="true")
+                else
+                    input(type="radio", name="uuid", value="#{index}")
+                | #{val.getMountPoint()}
